Added unit tests for StaffAccountWriteRepo